[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_6"] }
postcard = { version = "1.0.8", default-features = false, features = [
    "use-std",
] }
socketcan = { version = "3.3.0", default-features = false, features = [
    "tokio",
] }
tokio = "1.38.0"

[build-dependencies]
glib-build-tools = "0.19.0"
