[package]
name = "device"
version = "0.1.0"
edition = "2021"

[dependencies]
bmp085-180-rs = { version = "1.0.0" }
ch32-can-rs = { features = [
    "ch32v208wbu6",
], git = "https://github.com/marti157/ch32-can-rs.git", rev = "7f5aec97d9e6dae610dae7a05194e2dec1611330" }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
embassy-time = { version = "0.3.0" }
qingke = { version = "0.2.0" }
qingke-rt = { version = "0.2.1" }
panic-halt = "0.2.0"
embassy-sync = "0.6.0"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
postcard = "1.0.8"
heapless = "0.7.17"
